[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
anyhow = "1.0.59"                                   # error handling
atomic_enum = "0.3.0"
bytes = "1.3.0"                                     # helps manage buffers
clap = { version = "4.5.43", features = ["derive"] }
either = "1.15.0"
indexmap = "2.10.0"
itertools = "0.14.0"
num = "0.4.3"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.47.1", features = ["full"] } # async networking
tokio-stream = "0.1.17"
winnow = "0.7.12"
